<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/curve_shapred"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:id="@+id/mangoesSpecies"
        android:layout_margin="@dimen/marginNormal"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/marginNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/mangoes_species"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/mangoes_varieties"
                android:textColor="@color/black"
                android:textSize="@dimen/textNormal"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"

        android:id="@+id/plantDiseases"
        android:layout_margin="@dimen/marginNormal"
        app:layout_constraintTop_toBottomOf="@+id/mangoesSpecies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/marginNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/plant_diseases"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/diseases_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/textNormal"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/marginNormal"
        android:id="@+id/moreHeader"
        android:text="@string/more"
        android:textSize="@dimen/header"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>