<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.NoActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/diseaseImage"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_pest"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_height="?attr/actionBarSize">
                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_outline_button"
                    android:contentDescription="@string/camera_capture"
                    android:elevation="@dimen/marginNormal"
                    android:padding="8dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/ic_left_arrow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"/>
            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:id="@+id/diseaseName"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/header"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:padding="@dimen/marginNormal"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:id="@+id/pathogen"
                android:background="@drawable/rounded_red"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/marginNormal"
                android:textSize="@dimen/textNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:padding="@dimen/marginNormal"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/diseaseName"
                android:layout_width="match_parent"
                android:id="@+id/diseaseSymptoms"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/textNormal"
                android:padding="@dimen/marginNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_height="wrap_content"/>
            <TextView
                app:layout_constraintTop_toBottomOf="@+id/diseaseSymptoms"
                android:layout_width="match_parent"
                android:id="@+id/chemicalControlsHeader"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/textTitle"
                android:text="@string/chemicalControl"
                android:padding="@dimen/marginNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/chemicalControlsHeader"
                android:layout_width="match_parent"
                android:id="@+id/chemicalControl"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/textNormal"
                android:text="@string/chemicalControl"
                android:padding="@dimen/marginNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/chemicalControl"
                android:layout_width="match_parent"
                android:id="@+id/organicControlsHeader"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/textTitle"
                android:text="@string/organic_control"
                android:padding="@dimen/marginNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/organicControlsHeader"
                android:layout_width="match_parent"
                android:id="@+id/organicControl"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/textNormal"
                android:text="@string/organic_control"
                android:padding="@dimen/marginNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/organicControl"
                android:layout_width="match_parent"
                android:id="@+id/triggersHeader"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/textTitle"
                android:text="@string/triggers"
                android:padding="@dimen/marginNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/triggersHeader"
                android:layout_width="match_parent"
                android:id="@+id/triggers"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/textNormal"
                android:text="@string/triggers"
                android:padding="@dimen/marginNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/triggers"
                android:layout_width="match_parent"
                android:id="@+id/hostsHeader"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/textTitle"
                android:text="@string/hosts"
                android:padding="@dimen/marginNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/hostsHeader"
                android:layout_width="match_parent"
                android:id="@+id/hosts"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/textNormal"
                android:text="@string/triggers"
                android:padding="@dimen/marginNormal"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>